--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "luxon": "^3.3.0",
     "match-sorter": "^6.3.1",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
