--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
-    "firebase": "^9.22.1",
+    "firebase": "^9.22.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "luxon": "^3.3.0",
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.12.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
